--- a/proj/pred/templates/pred/base_layout.html
+++ b/proj/pred/templates/pred/base_layout.html
@@ -120,6 +120,7 @@ function ChangeImgSubmitNumSeq(imgPtr) {
               <tr align="left"> <td><a href="/pred/serverstatus/" class="mainlevel">Server status</a></td> </tr>
               <tr align="left"> <td><a href="/pred/example/" class="mainlevel">Example results</a></td> </tr>
               <tr align="left"> <td><a href="/pred/oldtopcons/" class="mainlevel">BOCTOPUS 1</a></td> </tr>
+              <tr align="left"> <td><a href="/pred/privacy/" class="mainlevel">Privacy policy</a></td> </tr>
               <tr align="left"> <td><a href="/pred/help/" class="mainlevel">Help</a></td> </tr>
             </table>
             <br>
